--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@arco-design/web-react": "^2.66.7",
     "next": "15.5.3",
+    "nodemailer": "^7.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "resend": "^6.4.2",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
